--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<!-- saved from url=(0027)https://skjolber.github.io/ -->
 <html class="csstransforms csstransforms3d csstransitions"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Thomas Rørvik Skjølberg</title>
-<link rel="icon" href="https://skjolber.github.io/favicon.png" type="image/png">
-<link href="./Thomas Rørvik Skjølberg_files/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="./Thomas Rørvik Skjølberg_files/jquery.fancybox.css" type="text/css" media="screen">
-<link href="./Thomas Rørvik Skjølberg_files/style.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="./Thomas Rørvik Skjølberg_files/font-awesome.min.css">
-<link href="./Thomas Rørvik Skjølberg_files/animate.css" rel="stylesheet" type="text/css">
+<title>Wahab Hussain</title>
+<link rel="icon" href="https://hellowahab.github.io/favicon.png" type="image/png">
+<link href="./index_files/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="./index_files/jquery.fancybox.css" type="text/css" media="screen">
+<link href="./index_files/style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="./index_files/font-awesome.min.css">
+<link href="./index_files/animate.css" rel="stylesheet" type="text/css">
 
 <!--[if lt IE 9]>
     <script src="js/respond-1.1.0.min.js"></script>
