--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <script src="js/html5element.js"></script>
 <![endif]-->
 
-<script async="" src="./Thomas Rørvik Skjølberg_files/analytics.js.download"></script><script>
+<script async="" src="./index_files/analytics.js.download"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-65678115-1', 'auto');
+  ga('create', 'UA-65678110-0', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -38,8 +38,8 @@
 			 -->
 
 				<h2>
-					Thomas Rørvik Skjølberg <br>
-					<strong>A technologist based in Oslo</strong>
+					Wahab Hussain <br>
+					<strong>A technologist based in Pakistan</strong>
 				</h2>
 			</div>
 		</div>
