--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="inner_section">
 					<div class="row">
 						<div class="col-md-6">
-							<img class="img-responsive" src="./Thomas Rørvik Skjølberg_files/guy.jpg" align="">
+							<img class="img-responsive" src="./index_files/guy.jpg" align="">
 						</div>
 						<div class="col-md-6">
 							<h3>Building an automated world</h3>
@@ -290,7 +290,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(0px, 0px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four  backend  isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/lil.jpg" alt="Portfolio 1">
+						<img src="./index_files/lil.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -308,7 +308,7 @@
 				<!-- Portfolio Item-->
 				<figure style="transform: translate3d(320px, 0px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four backend isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/metercloud.jpg" alt="Portfolio 1">
+						<img src="./index_files/metercloud.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -326,7 +326,7 @@
 				<!-- Portfolio Item-->
 				<figure style="transform: translate3d(640px, 0px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four  backend opensource web isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/xmlformatter.jpg" alt="Portfolio 1">
+						<img src="./index_files/xmlformatter.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -344,7 +344,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(0px, 213px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four  mobile isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/vizreporter.jpg" alt="Portfolio 1">
+						<img src="./index_files/vizreporter.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -362,7 +362,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(320px, 213px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four  backend isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/mobilize.jpg" alt="Mobilize">
+						<img src="./index_files/mobilize.jpg" alt="Mobilize">
 					</div>
 					<figcaption>
 						<div>
@@ -380,7 +380,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(640px, 213px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four mobile isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/nfcdeveloper.jpg" alt="NFC Developer">
+						<img src="./index_files/nfcdeveloper.jpg" alt="NFC Developer">
 					</div>
 					<figcaption>
 						<div>
@@ -399,7 +399,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(0px, 426px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four opensource frontend isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/ndefeditor.jpg" alt="Portfolio 1">
+						<img src="./index_files/ndefeditor.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -417,7 +417,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(320px, 426px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four opensource isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/ndeftools.jpg" alt="Portfolio 1">
+						<img src="./index_files/ndeftools.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -435,7 +435,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(640px, 426px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four backend frontend isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/shopify.jpg" alt="Portfolio 1">
+						<img src="./index_files/shopify.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -453,7 +453,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(0px, 639px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four backend isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/bpmn.jpg" alt="Portfolio 1">
+						<img src="./index_files/bpmn.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -471,7 +471,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(320px, 639px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four frontend isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/aksje.jpg" alt="Portfolio 1">
+						<img src="./index_files/aksje.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -489,7 +489,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(640px, 639px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four mobile isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/externalnfc.jpg" alt="Portfolio 1">
+						<img src="./index_files/externalnfc.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -506,7 +506,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(0px, 852px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four backend opensource isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/3d-bin-container-packing.jpg" alt="Portfolio 1">
+						<img src="./index_files/3d-bin-container-packing.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -523,7 +523,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(320px, 852px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four backend opensource isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/json-log-domain.jpg" alt="Portfolio 1">
+						<img src="./index_files/json-log-domain.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -540,7 +540,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(640px, 852px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four backend opensource isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/mockito-soap-cxf.jpg" alt="Portfolio 1">
+						<img src="./index_files/mockito-soap-cxf.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -557,7 +557,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(0px, 1065px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four backend opensource isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/mockito-rest-spring.jpg" alt="Portfolio 1">
+						<img src="./index_files/mockito-rest-spring.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -574,7 +574,7 @@
 				<!-- Portfolio Item -->
 				<figure style="transform: translate3d(320px, 1065px, 0px); opacity: 1; position: absolute; left: 0px; top: 0px; width: 315px;" class="portfolio-item one-four backend opensource isotope-item effect-oscar">
 					<div class="portfolio_img">
-						<img src="./Thomas Rørvik Skjølberg_files/keycloak.jpg" alt="Portfolio 1">
+						<img src="./index_files/keycloak.jpg" alt="Portfolio 1">
 					</div>
 					<figcaption>
 						<div>
@@ -802,15 +802,15 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="./Thomas Rørvik Skjølberg_files/jquery-1.11.0.min.js.download"></script>
-	<script type="text/javascript" src="./Thomas Rørvik Skjølberg_files/bootstrap.min.js.download"></script>
-	<script type="text/javascript" src="./Thomas Rørvik Skjølberg_files/jquery-scrolltofixed.js.download"></script>
-	<script type="text/javascript" src="./Thomas Rørvik Skjølberg_files/jquery.nav.js.download"></script>
-	<script type="text/javascript" src="./Thomas Rørvik Skjølberg_files/jquery.easing.1.3.js.download"></script>
-	<script type="text/javascript" src="./Thomas Rørvik Skjølberg_files/jquery.isotope.js.download"></script>
-	<script src="./Thomas Rørvik Skjølberg_files/jquery.fancybox.pack.js.download" type="text/javascript"></script>
-	<script type="text/javascript" src="./Thomas Rørvik Skjølberg_files/wow.js.download"></script>
-	<script type="text/javascript" src="./Thomas Rørvik Skjølberg_files/custom.js.download"></script>
+	<script type="text/javascript" src="./index_files/jquery-1.11.0.min.js.download"></script>
+	<script type="text/javascript" src="./index_files/bootstrap.min.js.download"></script>
+	<script type="text/javascript" src="./index_files/jquery-scrolltofixed.js.download"></script>
+	<script type="text/javascript" src="./index_files/jquery.nav.js.download"></script>
+	<script type="text/javascript" src="./index_files/jquery.easing.1.3.js.download"></script>
+	<script type="text/javascript" src="./index_files/jquery.isotope.js.download"></script>
+	<script src="./index_files/jquery.fancybox.pack.js.download" type="text/javascript"></script>
+	<script type="text/javascript" src="./index_files/wow.js.download"></script>
+	<script type="text/javascript" src="./index_files/custom.js.download"></script>
 
 
 
