--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 					</div>
 					<div id="main-nav" class="collapse navbar-collapse navStyle" style="background: none;">
 						<ul class="nav navbar-nav" id="mainNav">
-							<li class="active"><a href="https://skjolber.github.io/#header" class="scroll-link">Home</a></li>
-							<li class=""><a href="https://skjolber.github.io/#aboutUs" class="scroll-link">About Me</a></li>
-							<li class=""><a href="https://skjolber.github.io/#service" class="scroll-link">My Skills</a></li>
-							<li class=""><a href="https://skjolber.github.io/#Projects" class="scroll-link">Projects</a></li>
-							<li class=""><a href="https://skjolber.github.io/#experience" class="scroll-link">Experience</a></li>
-							<li><a href="https://skjolber.github.io/#contact" class="scroll-link">Contact</a></li>
+							<li class="active"><a href="https://hellowahab.github.io/#header" class="scroll-link">Home</a></li>
+							<li class=""><a href="https://hellowahab.github.io/#aboutUs" class="scroll-link">About Me</a></li>
+							<li class=""><a href="https://hellowahab.github.io/#service" class="scroll-link">My Skills</a></li>
+							<li class=""><a href="https://hellowahab.github.io/#Projects" class="scroll-link">Projects</a></li>
+							<li class=""><a href="https://hellowahab.github.io/#experience" class="scroll-link">Experience</a></li>
+							<li><a href="https://hellowahab.github.io/#contact" class="scroll-link">Contact</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -265,19 +265,19 @@
 
 			<div id="filters" class="sixteen columns">
 				<ul class="clearfix">
-					<li><a id="all" href="https://skjolber.github.io/#" data-filter="*" class="active">
+					<li><a id="all" href="https://hellowahab.github.io/#" data-filter="*" class="active">
 							<h5>All</h5>
 					</a></li>
-					<li><a class="" href="https://skjolber.github.io/#" data-filter=".backend">
+					<li><a class="" href="https://hellowahab.github.io/#" data-filter=".backend">
 							<h5>Back-end</h5>
 					</a></li>
-					<li><a class="" href="https://skjolber.github.io/#" data-filter=".mobile">
+					<li><a class="" href="https://hellowahab.github.io/#" data-filter=".mobile">
 							<h5>Mobile</h5>
 					</a></li>
-					<li><a class="" href="https://skjolber.github.io/#" data-filter=".opensource">
+					<li><a class="" href="https://hellowahab.github.io/#" data-filter=".opensource">
 							<h5>Open source</h5>
 					</a></li>
-					<li><a class="" href="https://skjolber.github.io/#" data-filter=".frontend">
+					<li><a class="" href="https://hellowahab.github.io/#" data-filter=".frontend">
 							<h5>Front-end</h5>
 					</a></li>
 				</ul>
@@ -366,7 +366,7 @@
 					</div>
 					<figcaption>
 						<div>
-							<a href="https://skjolber.github.io/" target="_blank" class="fancybox">
+							<a href="https://hellowahab.github.io/" target="_blank" class="fancybox">
 								<h2>
 									Mobil<span>ize</span>
 								</h2>
@@ -457,7 +457,7 @@
 					</div>
 					<figcaption>
 						<div>
-							<a href="https://skjolber.github.io/" target="_blank" class="fancybox">
+							<a href="https://hellowahab.github.io/" target="_blank" class="fancybox">
 								<h2>
 									Banking<span>BPM</span>
 								</h2>
