--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="inner_section">
 					<div class="row">
 						<div class="col-md-6">
-							<img class="img-responsive" src="./index_files/guy.jpg" align="">
+							<img class="img-responsive" src="./index_files/wahabhussain.jpg" align="">
 						</div>
 						<div class="col-md-6">
 							<h3>Building an automated world</h3>
