--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
 						<div class="contact_info">
 							<div class="detail">
 								<h4>Location</h4>
-								<p>Oslo, Norway</p>
+								<p>Karachi, Pakistan</p>
 							</div>
 						</div>
 					</div>
@@ -761,7 +761,7 @@
 						<div class="contact_info">
 							<div class="detail">
 								<h4>Phone</h4>
-								<p>+47 99604335</p>
+								<p>+92 300 27 29 26 1</p>
 							</div>
 						</div>
 					</div>
@@ -770,7 +770,7 @@
 							<div class="detail">
 								<h4>LinkedIn</h4>
 								<p>
-									<a href="https://www.linkedin.com/in/skjolberg">Thomas Skjølberg</a>
+									<a href="https://www.linkedin.com/in/hellowahab">Wahab Hussain</a>
 								</p>
 							</div>
 						</div>
@@ -779,7 +779,7 @@
 						<div class="contact_info">
 							<div class="detail">
 								<h4>Email (private)</h4>
-								<p><a href="mailto:thomas.skjolberg@gmail.com">thomas.skjolberg@gmail.com</a></p>
+								<p><a href="mailto:hellowahab@gmail.com">hellowahabATgmail.com</a></p>
 							</div>
 						</div>
 					</div>
@@ -787,7 +787,7 @@
 						<div class="contact_info">
 							<div class="detail">
 								<h4>Email (work)</h4>
-								<p><a href="mailto:thomas.skjoelberg@greenbird.com">thomas.skjolberg@acando.no</a></p>
+								<p><a href="mailto:hellowahab@gmail.com">hellowahabATgmail.com<</a></p>
 							</div>
 						</div>
 					</div>
