--- a/index.html
+++ b/index.html
@@ -717,24 +717,24 @@
 							</div>
 						</div>
 						<div class="date-title">
-							<span>1998</span>
+							<span>2006</span>
 						</div>
 						<div class="row">
 							<div class="col-sm-6 news-item right">
 								<div class="news-content">
 									<div class="date">
-										<p>Jul</p>
+										<p>April</p>
 									</div>
-									<h2 class="news-title">Norwegian Armed Forces</h2>
+									<h2 class="news-title">e-Intelligence Pvt Ltd</h2>
 									<span>Private<i class="fa fa-graduation-cap"></i></span>
 									<p>
-										Initial compulsory military service.
+										Software Engineer
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="date-title">
-							<span>1997</span>
+							<span>2005</span>
 						</div>
 					</div>
 				</div>
