--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
 						</div>
 						<div class="col-md-6">
 							<h3>Building an automated world</h3>
-							<p>A few apps at a time.</p>
+							<p></p>
 
-							<p>Starting on CBM64, using technology has come natural to me. Based on a civil engineering degree, I now have more than 14 years of hands-on experience working in the software industry.</p>
+							<p>Starting on Windows NT, using technology has come natural to me. Based on a computer engineering degree, I now have more than 14 years of hands-on experience working in the software industry.</p>
 
 							<ul class="about-us-list">
 								<li class="points">Successful entrepreneur</li>
-								<li class="points">Knowledge of a range of technologies within the Java ecosystem</li>
+								<li class="points">Knowledge of a range of technologies within the Dotnet-ecosystem</li>
 								<li class="points">Good at understanding and taking advantage of new technologies and processes</li>
 								<li class="points">Knowledge and experience from multiple roles within the ecosystem</li>
 								<li class="points">Hands-on experience from new media, public and banking sectors</li>
-								<li class="points">More than 200k combined Android application installs - just for the fun of it</li>
+								<li class="points">....</li>
 							</ul>
 							<!-- /.about-us-list -->
 
@@ -191,7 +191,7 @@
 					<p>I believe in automation and self-service, not only for the end-users but in the software development process itself.</p>
 					<br>
 					<p>
-						For a more extensive list of skills (keywords), I suggest you visit my <a href="https://no.linkedin.com/in/skjolberg">LinkedIn</a>, <a href="http://stackoverflow.com/users/459579/thomasrs">Stackoverflow</a> or <a href="https://github.com/skjolber">Github</a> user account.
+						For a more extensive list of skills (keywords), I suggest you visit my <a href="https://no.linkedin.com/in/hellowahab">LinkedIn</a>, <a href="http://stackoverflow.com/users/3040682/hellowahab">Stackoverflow</a> or <a href="https://github.com/hellowahab">Github</a> user account.
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-6">
@@ -200,7 +200,7 @@
 						<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
 							<span class="sr-only">100% Complete</span>
 						</div>
-						<span class="progress-type">Java</span> <span class="progress-completed">100%</span>
+						<span class="progress-type">Dotnet</span> <span class="progress-completed">100%</span>
 					</div>
 					<div class="progress">
 						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
@@ -611,7 +611,7 @@
 				<div class="container">
 					<div class="timeline">
 						<div class="date-title">
-							<span><script>document.write(new Date().getFullYear())</script>2018</span>
+							<span><script>document.write(new Date().getFullYear())</script></span>
 						</div>
 						<div class="row">
 							<div class="col-sm-6 news-item right">
@@ -619,8 +619,8 @@
 									<div class="date">
 										<p>Aug</p>
 									</div>
-									<h2 class="news-title">Acando</h2>
-									<span>Consultant <i class="fa fa-star"></i></span>
+									<h2 class="news-title">Creative Chaos</h2>
+									<span>Software Development Lead <i class="fa fa-star"></i></span>
 									<p>Infrastructure and security for municipal integration- and self-service platform</p>
 								</div>
 							</div>
