--- a/index.html
+++ b/index.html
@@ -668,12 +668,10 @@
 									<div class="date">
 										<p>Oct</p>
 									</div>
-									<h2 class="news-title">Adactus / Vizrt</h2>
-									<span>Senior Developer and Architect - New Media Technologies <i class="fa fa-star-half-o"></i></span>
+									<h2 class="news-title">Chilli Zone</h2>
+									<span>Web Developer</span>
 									<p>
-										Development of various modules for automated media distribution.<br>
-										<br>
-										<b>Vizrt acquires Adactus in the summer of 2010 for 30MNOK.</b>
+										Project:- Kiddi Mall http://www.kiddimall.co.uk/
 									</p>
 								</div>
 							</div>
@@ -688,30 +686,27 @@
 									<div class="date">
 										<p>Jan</p>
 									</div>
-									<h2 class="news-title">Adactus</h2>
-									<span>Co-founder / CTO <i class="fa fa-star-o"></i></span>
+									<h2 class="news-title">Salsoft Technologies</h2>
+									<span>Senior Software Engineer</span>
 									<p>
-										Creating innovative products for video distribution to mobiles - working day and night. <br>
-										<br>Part time PhDs student for a year, but quit to focus on building a successful business.
+										Projects:-
+										Job Tracking System
+										Coding System
 									</p>
 								</div>
 							</div>
 						</div>
-
-						<div class="date-title">
-							<span>2004</span>
-						</div>
+						
 						<div class="row">
 							<div class="col-sm-6 news-item right">
 								<div class="news-content">
 									<div class="date">
 										<p>Aug</p>
 									</div>
-									<h2 class="news-title">Norwegian University of Science and Technology</h2>
-									<span>Student <i class="fa fa-graduation-cap"></i></span>
+									<h2 class="news-title">First Habib Modaraba</h2>
+									<span>Officer Grade C<i class="fa fa-graduation-cap"></i></span>
 									<p>
-										Civil Engineer in Electronics and Telecommunications.<br>
-										<br>Part time student assistant (beer money) / UKA-01.
+										In house MIS System.										
 									</p>
 								</div>
 							</div>
@@ -726,9 +721,11 @@
 										<p>April</p>
 									</div>
 									<h2 class="news-title">e-Intelligence Pvt Ltd</h2>
-									<span>Private<i class="fa fa-graduation-cap"></i></span>
+									<span>Software Engineer<i class="fa fa-graduation-cap"></i></span>
 									<p>
-										Software Engineer
+										Projects:-
+										1. In-house Developed ERP 
+										2. In-house developed Web based CRM
 									</p>
 								</div>
 							</div>
