Addition of bg files along with a new title

--- a/index.html
+++ b/index.html
@@ -619,9 +619,25 @@
 									<div class="date">
 										<p>Aug</p>
 									</div>
-									<h2 class="news-title">Creative Chaos</h2>
-									<span>Software Development Lead <i class="fa fa-star"></i></span>
+									<h2 class="news-title">Principal Software Developer</h2>
+									<span>Think Digitally<i class="fa fa-star"></i></span>
 									<p>Infrastructure and security for municipal integration- and self-service platform</p>
+								</div>
+							</div>
+						</div>
+						<div class="date-title">
+							<span>2022</span>
+						</div>
+						
+						<div class="row">
+							<div class="col-sm-6 news-item">
+								<div class="news-content">
+									<div class="date">
+										<p>Oct</p>
+									</div>
+									<h2 class="news-title">Software Development Manager</h2>
+									<span>Creative Chaos<i class="fa fa-star"></i></span>
+									<p>ESBs and BPM engines in the banking and electric power sectors.</p>
 								</div>
 							</div>
 
