--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<h2>
 					Wahab Hussain <br>
-					<strong>A technologist based in Pakistan</strong>
+					<strong>A Software Engineer based in Pakistan</strong>
 				</h2>
 			</div>
 		</div>
@@ -77,24 +77,23 @@
 		<div class="inner_wrapper about-us aboutUs-container fadeInLeft animated wow animated" style="visibility: visible; animation-name: fadeInLeft;">
 			<div class="container">
 				<h2>About Me</h2>
-				<h6>An innovative soul.</h6>
+				<h6>Elevating the Digital Frontier through Lifelong Software Engineering Excellence.</h6>
 				<div class="inner_section">
 					<div class="row">
 						<div class="col-md-6">
 							<img class="img-responsive" src="./index_files/wahabhussain.png" align="">
 						</div>
 						<div class="col-md-6">
-							<h3>Building an automated world</h3>
+							<h3>Keep learning</h3>
 							<p></p>
 
-							<p>Starting on Windows NT, using technology has come natural to me. Based on a computer engineering degree, I now have more than 14 years of hands-on experience working in the software industry.</p>
+							<p>After graduating in Computer Engineering, I pursed software development roles using dotnet framework specifically C#.</p>
 
 							<ul class="about-us-list">
-								<li class="points">Successful entrepreneur</li>
+								<li class="points">Building Tomorrow's Digital World, One Line of Code at a Time</li>
 								<li class="points">Knowledge of a range of technologies within the Dotnet-ecosystem</li>
 								<li class="points">Good at understanding and taking advantage of new technologies and processes</li>
 								<li class="points">Knowledge and experience from multiple roles within the ecosystem</li>
-								<li class="points">Hands-on experience from new media, public and banking sectors</li>
 								<li class="points">....</li>
 							</ul>
 							<!-- /.about-us-list -->
@@ -110,7 +109,7 @@
 
 
 	<!--Service-->
-	<section id="service">
+	<section id="service" style="display: none;">
 		<div class="container">
 			<h2>My Skills and experience</h2>
 			<h6>Some highlights.</h6>
@@ -121,7 +120,6 @@
 							<span><i class="fa fa-server"></i></span>
 						</div>
 						<div class="service_block">
-
 							<h3 class="animated fadeInUp wow animated" style="visibility: visible; animation-name: fadeInUp;">Integration Solutions</h3>
 							<p class="animated fadeInDown wow animated" style="visibility: visible; animation-name: fadeInDown;">Mule ESB, Apache Camel and Spring using SOAP and REST resources.</p>
 						</div>
@@ -223,7 +221,7 @@
 					<div class="progress">
 						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
 							<span class="sr-only">50% Complete (danger)</span>
-						</div>
+						</div>			
 						<span class="progress-type">Web development</span> <span class="progress-completed">50%</span>
 					</div>
 					<div class="progress">
@@ -232,14 +230,19 @@
 						</div>
 						<span class="progress-type">Security</span> <span class="progress-completed">100%</span>
 					</div>
-
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+							<span class="sr-only">60% Complete</span>
+						</div>
+						<span class="progress-type">Angular</span> <span class="progress-completed">60%</span>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<!-- Portfolio -->
-	<section id="Projects">
+	<section id="Projects" style="display: none;">
 
 		<!-- Container -->
 		<div class="container">
@@ -621,7 +624,19 @@
 									</div>
 									<h2 class="news-title">Principal Software Developer</h2>
 									<span>Think Digitally<i class="fa fa-star"></i></span>
-									<p>Infrastructure and security for municipal integration- and self-service platform</p>
+									<p>
+										•	Micro front end using Angular
+										•	Web APIs using .NET Core 6.0
+										•	Consuming Kendo UI components for Angular
+										•	Profiling & Optimizing Angular Applications for better performance
+										•	Practising Scrum in its best form having Standup, Backlog Grooming, Planning, and Estimation using Planning Poker & Retrospective
+										•	Microservices using .net 6 and using Microsoft Tye for docker-based setup.
+										•	Used AWS Cognito and dynamodb for microservice
+										•	Using EF Core 6.0
+										•	Using Jquery 3.6 to develop an interactive and fast website
+										•	Using Bitbucket for Source control and PR creation
+										•	Using pytest to automate the existing test cases
+									</p>
 								</div>
 							</div>
 						</div>
@@ -633,34 +648,42 @@
 							<div class="col-sm-6 news-item">
 								<div class="news-content">
 									<div class="date">
-										<p>Oct</p>
+										<p>August</p>
 									</div>
 									<h2 class="news-title">Software Development Manager</h2>
 									<span>Creative Chaos<i class="fa fa-star"></i></span>
-									<p>ESBs and BPM engines in the banking and electric power sectors.</p>
+									<p> 
+										•	Complete dockerization of our dotnet projects
+										•	Kubernetes-based setup for the whole platform
+										•	Team management for developers and QAs
+									</p>
 								</div>
 							</div>
 
 						</div>
 						<div class="date-title">
-							<span>2016</span>
+							<span>2021</span>
 						</div>
 						
 						<div class="row">
 							<div class="col-sm-6 news-item">
 								<div class="news-content">
 									<div class="date">
-										<p>Oct</p>
+										<p>July</p>
 									</div>
-									<h2 class="news-title">Greenbird Integration Technlogies</h2>
-									<span>Senior Developer &amp; Consultant <i class="fa fa-star"></i></span>
-									<p>ESBs and BPM engines in the banking and electric power sectors.</p>
+									<h2 class="news-title">Software Development Lead</h2>
+									<span>Creative Chaos<i class="fa fa-star"></i></span>
+									<p>
+										•	Flawless migration of .net Framework projects on .net core 3.0
+										•	Implemented TCP IP-based framework to implement ISO-8583 on both connected and on-demand mode
+										•	Host card emulation implementation to perform Tap & Transactions.
+									</p>
 								</div>
 							</div>
 
 						</div>
 						<div class="date-title">
-							<span>2012</span>
+							<span>2015</span>
 						</div>
 						<div class="row">
 							<div class="col-sm-6 news-item right">
@@ -668,9 +691,9 @@
 									<div class="date">
 										<p>Nov</p>
 									</div>
-									<h2 class="news-title">Antares Gruppen</h2>
-									<span>Senior System Consultant <i class="fa fa-star-half-o"></i></span>
-									<p>Mobile banking, open source projects.</p>
+									<h2 class="news-title">Principal Software Engineer</h2>
+									<span>Creative Chaos<i class="fa fa-star-half-o"></i></span>
+									<p>•	Implementing Windows Services for (SMS Gateway, USSD Gateway, and Platform Service).</p>
 								</div>
 							</div>
 
@@ -810,7 +833,7 @@
 		</div>
 		<div class="container">
 			<div class="footer_bottom">
-				<span>Last updated September 2016.</span>
+				<span>Last updated June 2023.</span>
 			</div>
 		</div>
 	</footer>
