--- a/index.html
+++ b/index.html
@@ -625,17 +625,19 @@
 									<h2 class="news-title">Principal Software Developer</h2>
 									<span>Think Digitally<i class="fa fa-star"></i></span>
 									<p>
-										•	Micro front end using Angular
-										•	Web APIs using .NET Core 6.0
-										•	Consuming Kendo UI components for Angular
-										•	Profiling & Optimizing Angular Applications for better performance
-										•	Practising Scrum in its best form having Standup, Backlog Grooming, Planning, and Estimation using Planning Poker & Retrospective
-										•	Microservices using .net 6 and using Microsoft Tye for docker-based setup.
-										•	Used AWS Cognito and dynamodb for microservice
-										•	Using EF Core 6.0
-										•	Using Jquery 3.6 to develop an interactive and fast website
-										•	Using Bitbucket for Source control and PR creation
-										•	Using pytest to automate the existing test cases
+										<ul>
+											<li>Micro front end using Angular</li>
+											<li>Web APIs using .NET Core 6.0</li>
+											<li>Consuming Kendo UI components for Angular</li>
+											<li>Profiling & Optimizing Angular Applications for better performance</li>
+											<li>Practising Scrum in its best form having Standup, Backlog Grooming, Planning, and Estimation using Planning Poker & Retrospective</li>
+											<li>Microservices using .NET 6 and using Microsoft Tye for docker-based setup</li>
+											<li>Used AWS Cognito and DynamoDB for microservice</li>
+											<li>Using EF Core 6.0</li>
+											<li>Using jQuery 3.6 to develop an interactive and fast website</li>
+											<li>Using Bitbucket for Source control and PR creation</li>
+											<li>Using pytest to automate the existing test cases</li>
+										  </ul>									  
 									</p>
 								</div>
 							</div>
@@ -653,9 +655,11 @@
 									<h2 class="news-title">Software Development Manager</h2>
 									<span>Creative Chaos<i class="fa fa-star"></i></span>
 									<p> 
-										•	Complete dockerization of our dotnet projects
-										•	Kubernetes-based setup for the whole platform
-										•	Team management for developers and QAs
+										<ul>
+											<li>Complete dockerization of our dotnet projects</li>
+											<li>Kubernetes-based setup for the whole platform</li>
+											<li>Team management for developers and QAs</li>
+										  </ul>
 									</p>
 								</div>
 							</div>
@@ -674,9 +678,11 @@
 									<h2 class="news-title">Software Development Lead</h2>
 									<span>Creative Chaos<i class="fa fa-star"></i></span>
 									<p>
-										•	Flawless migration of .net Framework projects on .net core 3.0
-										•	Implemented TCP IP-based framework to implement ISO-8583 on both connected and on-demand mode
-										•	Host card emulation implementation to perform Tap & Transactions.
+										<ul>
+											<li>Flawless migration of .NET Framework projects on .NET Core 3.0</li>
+											<li>Implemented TCP IP-based framework to implement ISO-8583 on both connected and on-demand mode</li>
+											<li>Host card emulation implementation to perform Tap & Transactions</li>
+										  </ul>
 									</p>
 								</div>
 							</div>
@@ -693,7 +699,11 @@
 									</div>
 									<h2 class="news-title">Principal Software Engineer</h2>
 									<span>Creative Chaos<i class="fa fa-star-half-o"></i></span>
-									<p>•	Implementing Windows Services for (SMS Gateway, USSD Gateway, and Platform Service).</p>
+									<p>
+										<ul>
+											<li>Implementing Windows Services for (SMS Gateway, USSD Gateway, and Platform Service)</li>
+										  </ul>
+									</p>
 								</div>
 							</div>
 
