--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 							<div class="col-sm-6 news-item right">
 								<div class="news-content">
 									<div class="date">
-										<p>Aug</p>
+										<p>Sep</p>
 									</div>
 									<h2 class="news-title">Principal Software Developer</h2>
 									<span>Think Digitally<i class="fa fa-star"></i></span>
@@ -650,7 +650,7 @@
 							<div class="col-sm-6 news-item">
 								<div class="news-content">
 									<div class="date">
-										<p>August</p>
+										<p>Aug</p>
 									</div>
 									<h2 class="news-title">Software Development Manager</h2>
 									<span>Creative Chaos<i class="fa fa-star"></i></span>
@@ -695,7 +695,7 @@
 							<div class="col-sm-6 news-item right">
 								<div class="news-content">
 									<div class="date">
-										<p>Nov</p>
+										<p>Aug</p>
 									</div>
 									<h2 class="news-title">Principal Software Engineer</h2>
 									<span>Creative Chaos<i class="fa fa-star-half-o"></i></span>
@@ -709,7 +709,88 @@
 
 						</div>
 						<div class="date-title">
+							<span>2014</span>
+						</div>
+						<div class="row">
+							<div class="col-sm-6 news-item right">
+								<div class="news-content">
+									<div class="date">
+										<p>Oct</p>
+									</div>
+									<h2 class="news-title">Project Manager</h2>
+									<span>Creative Chaos<i class="fa fa-star-half-o"></i></span>
+									<p>
+										<ul>
+											<li>Creating an end-to-end solution for the Ministry of Kuwait to automate the Stamp generation process</li>
+											<li>Assembling Cash Dispenser, Cash Acceptor, Label Printer, and Tag writer to create a fully functional kiosk</li>
+											<li>Creating an application for Handheld devices using Window CE for Stamp verification using a barcode reader</li>
+											<li>Creating a WPF-based application for easy customer interaction using a touch interface</li>
+										</ul>								  
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="date-title">
+							<span>2013</span>
+						</div>
+						<div class="row">
+							<div class="col-sm-6 news-item right">
+								<div class="news-content">
+									<div class="date">
+										<p>Aug</p>
+									</div>
+									<h2 class="news-title">Senior Business System Analyst</h2>
+									<span>Creative Chaos<i class="fa fa-star-half-o"></i></span>
+									<p>
+										<ul>
+											<li>Requirement Analysis and then creating a scope document for presales that can be pitched to the client.</li>
+										</ul>								  
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="date-title">
+							<span>2012</span>
+						</div>
+						<div class="row">
+							<div class="col-sm-6 news-item right">
+								<div class="news-content">
+									<div class="date">
+										<p>Aug</p>
+									</div>
+									<h2 class="news-title">Senior Software Engineer</h2>
+									<span>Creative Chaos<i class="fa fa-star-half-o"></i></span>
+									<p>
+										<ul>
+											<li>Build ASP.NET web form project using .NET 3.5</li>
+											<li>Completing a project built in PHP Zend Framework</li>
+										</ul>																			
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="date-title">
 							<span>2011</span>
+						</div>
+						<div class="row">
+							<div class="col-sm-6 news-item right">
+								<div class="news-content">
+									<div class="date">
+										<p>Aug</p>
+									</div>
+									<h2 class="news-title">Software Engineer</h2>
+									<span>Creative Chaos<i class="fa fa-star-half-o"></i></span>
+									<p>
+										<ul>
+											<li>Completing a website based on ASP.NET (2.0)</li>
+											<li>A client-server-based application using C#</li>
+										</ul>																													  
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="date-title">
+							<span>2009</span>
 						</div>
 						<div class="row">
 							<div class="col-sm-6 news-item">
@@ -745,7 +826,9 @@
 								</div>
 							</div>
 						</div>
-						
+						<div class="date-title">
+							<span>2007</span>
+						</div>
 						<div class="row">
 							<div class="col-sm-6 news-item right">
 								<div class="news-content">
@@ -753,7 +836,7 @@
 										<p>Aug</p>
 									</div>
 									<h2 class="news-title">First Habib Modaraba</h2>
-									<span>Officer Grade C<i class="fa fa-graduation-cap"></i></span>
+									<span>Assistant Programmer<i class="fa fa-graduation-cap"></i></span>
 									<p>
 										In house MIS System.										
 									</p>
