Contact info update

--- a/index.html
+++ b/index.html
@@ -907,16 +907,20 @@
 					<div class="col-lg-3 wow fadeInLeft delay-05s animated" style="visibility: visible; animation-name: fadeInLeft;">
 						<div class="contact_info">
 							<div class="detail">
-								<h4>Email (private)</h4>
-								<p><a href="mailto:hellowahab@gmail.com">hellowahabATgmail.com</a></p>
+								<h4>Pluralsight</h4>
+								<p>
+									<a href="https://app.pluralsight.com/profile/hellowahab">Wahab Hussain</a>
+								</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3 wow fadeInLeft delay-05s animated" style="visibility: visible; animation-name: fadeInLeft;">
 						<div class="contact_info">
 							<div class="detail">
-								<h4>Email (work)</h4>
-								<p><a href="mailto:hellowahab@gmail.com">hellowahabATgmail.com<</a></p>
+								<h4>GitHub</h4>
+								<p>
+									<a href="https://github.com/hellowahab">Wahab Hussain</a>
+								</p>
 							</div>
 						</div>
 					</div>
